# bojstat

./: .gitignore  README.md
.github/workflows/: ci.yml
python/: README.md  pyproject.toml
python/bojstat/: __init__.py  client.py  constants.py
python/tests/: test_client.py
r/: DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  bojstat-package.R  constants.R  cran-comments.md  utils.R
r/R/: api.R  bojstat-package.R  constants.R  utils.R
r/man/: boj_db_names.Rd  boj_frequencies.Rd  boj_get_data.Rd  boj_get_data_all.Rd  boj_get_layer.Rd  boj_get_metadata.Rd  boj_list_databases.Rd  boj_parse_resultset.Rd  boj_request.Rd  boj_search_series.Rd  boj_validate_db.Rd  boj_validate_frequency.Rd  bojstat-package.Rd
r/tests/: testthat.R
r/tests/testthat/: test-core.R
r/vignettes/: getting-started.Rmd
