[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bojstat"
version = "0.1.0"
description = "日本銀行 時系列統計データ検索サイト API Python クライアント"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Kazuki Hosoda", email = "placeholder@example.com" }
]
keywords = ["boj", "bank-of-japan", "statistics", "economics", "finance", "japan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pandas>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/kigasudayooo/bojstat"
Documentation = "https://github.com/kigasudayooo/bojstat#readme"
Repository = "https://github.com/kigasudayooo/bojstat"
Issues = "https://github.com/kigasudayooo/bojstat/issues"

[tool.hatch.build.targets.wheel]
packages = ["bojstat"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
